Add dscanner check

--- a/.github/workflows/dlang.yml
+++ b/.github/workflows/dlang.yml
@@ -15,9 +15,38 @@ jobs:
     - name: Setup DMD
       uses: dlang-community/setup-dlang@v1
       with:
-        compiler: dmd-2.100.2
+        compiler: dmd-latest
 
     - name: Run tests
       run: |
         dub build --build=unittest --config=unittest
         ./build/TestRunner -s
+
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Setup DMD
+      uses: dlang-community/setup-dlang@v1
+      with:
+        compiler: dmd-latest
+
+    - name: Build executable
+      run: |
+        dub build
+
+  audit:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Setup DMD
+      uses: dlang-community/setup-dlang@v1
+      with:
+        compiler: dmd-latest
+
+    - run: dub fetch dscanner
+    - run: dub run dscanner -- --styleCheck src
